--- a/dev/backend-tools-tests/Dockerfile
+++ b/dev/backend-tools-tests/Dockerfile
@@ -1,8 +1,6 @@
-FROM python:3.10-slim
+FROM python:3.11-slim
 
-WORKDIR /tmp
+WORKDIR /work
 RUN pip install --no-cache-dir --upgrade pip setuptools==67.8.0 toml==0.10.2 invoke
-COPY pyproject.toml README.md setup.cfg setup.py tasks.py /tmp/
+COPY pyproject.toml README.md setup.cfg setup.py tasks.py /work/
 RUN invoke install-deps --package test
-
-WORKDIR /src
