--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,40 @@
 name: CI
 
 on:
-  pull_request:
-  push:
-    branches:
-      - main
+  workflow_call:
 
 jobs:
+  check-qa:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Retrieve source code
+        uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+          architecture: x64
+
+      - name: Setup Python basic dependencies
+        run: |
+          python -m pip install --upgrade pip invoke
+
+      - name: Backend - Setup QA dependencies
+        run: |
+          cd backend
+          invoke install-deps --package qa --no-previous
+
+      - name: Backend - Report QA tool versions
+        run: |
+          cd backend
+          invoke report-qa-tools-versions
+
+      - name: Backend - Check QA
+        run: |
+          cd backend
+          invoke check-qa
+
   unit-tests:
     runs-on: ubuntu-22.04
 
@@ -14,7 +42,7 @@ jobs:
       - name: Retrieve source code
         uses: actions/checkout@v3
 
-      - name: Backend - Set up Python ${{ matrix.python }}
+      - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
@@ -22,7 +50,7 @@ jobs:
 
       - name: Backend - Install dependencies
         run: |
-          python -m pip install --upgrade pip invoke toml
+          python -m pip install --upgrade pip invoke
           cd backend
           invoke install-deps --package dev
 
