--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,7 +22,8 @@ test = [
 qa =  [
     "black >=23.3,<23.4",
     "isort >=5.12,<5.13",
-    "flake8 >=6.0,<6.1"
+    "flake8 >=6.0,<6.1",
+    "mypy >=1.3,<1.4", 
 ]
 dev = [
     "pre-commit >=3.3,<3.4",
