--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -6,17 +6,6 @@ services:
       - ../backend/src:/app/src
     ports:
       - 8000:80
-  # frontend-ui:
-  #   build: ../frontend-ui
-  #   container_name: om_frontend-ui
-  #   volumes:
-  #     - ../frontend-ui/src:/app
-  #   ports:
-  #     - 8001:80
-  #   environment:
-  #     METRICS_BACKEND_WEBAPI: http://localhost:8000/v1
-  #   depends_on:
-  #     - backend
   backend-tools:
     build:
       dockerfile: ../dev/backend-tools-tests/Dockerfile
@@ -24,12 +13,8 @@ services:
     container_name: om_backend-tools
     volumes:
       - ../backend/src:/work/src
+      - ../backend/tasks.py:/work/tasks.py
       - ../backend/tests:/work/tests
-  backend-tests:
-    build:
-      dockerfile: ../dev/backend-tools-tests/Dockerfile
-      context: ../backend
-    container_name: om_backend-tests
-    volumes:
-      - ../backend/src:/work/src
-      - ../backend/tests:/work/tests
+    environment:
+      DATABASE_URL: sqlite+aiosqlite://///work/src/backend/dev.db
+      TEST_DATABASE_URL: sqlite+aiosqlite://///work/tests/test.db
