--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,7 +22,7 @@ qa =  [
     "black >=23.3,<23.4",
     "isort >=5.12,<5.13",
     "flake8 >=6.0,<6.1",
-    "mypy >=1.3,<1.4", 
+    "pyright >=1.1,<1.2"
 ]
 dev = [
     "pre-commit >=3.3,<3.4",
@@ -38,3 +38,9 @@ target-version = ['py37', 'py38', 'py39', 'py310']
 [tool.pytest.ini_options]
 testpaths = ["tests", "../tests"]
 asyncio_mode = "auto"
+
+[tool.pyright]
+include = ["src", "tests"]
+extraPaths = ["src"]
+pythonVersion = "3.11"
+typeCheckingMode="strict"
