--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,10 @@ WORKDIR "/home"
 RUN python -m pip install --no-cache-dir -U \
       pip
 
+# Choose right architecture
+# COPY --from=docker.elastic.co/beats/filebeat-oss:8.8.1-arm64 /usr/share/filebeat /usr/share/filebeat
+COPY --from=docker.elastic.co/beats/filebeat-oss:8.8.1 /usr/share/filebeat /usr/share/filebeat
+
 # to set to your clients' origins
 ENV ALLOWED_ORIGINS http://localhost
 ENV DATABASE_URL sqlite+pysqlite:///local.db
