--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: om_backend
     volumes:
       - ../backend/src/offspot_metrics_backend:/usr/local/lib/python3.11/site-packages/offspot_metrics_backend
+      - reverse-proxy-srv:/reverse-proxy-logs
+      - filebeat-data:/filebeat-data
     command:
       - uvicorn
       - offspot_metrics_backend.entrypoint:app
@@ -15,7 +17,7 @@ services:
       - --reload-dir
       - /usr/local/lib/python3.11/site-packages/offspot_metrics_backend
     ports:
-      - 8000:80
+      - 8002:80
   backend-tools:
     build:
       dockerfile: ../dev/backend-tools-tests/Dockerfile
@@ -26,6 +28,29 @@ services:
       - ../backend/htmlcov:/src/htmlcov
       - ../backend/tasks.py:/src/tasks.py
       - ../backend/tests:/src/tests
+      - reverse-proxy-srv:/reverse-proxy-logs
+      - ../backend/filebeat.yml:/usr/share/filebeat/filebeat.yml
     environment:
       DATABASE_URL: sqlite+pysqlite://///src/src/offspot_metrics_backend/dev.db
       TEST_DATABASE_URL: sqlite+pysqlite://///src/tests/test.db
+  kiwix-serve:
+    container_name: om_kiwix
+    image: ghcr.io/kiwix/kiwix-serve
+    volumes:
+      - ./zims:/data
+    command: '*.zim' 
+    ports:
+      - 8001:8080
+  reverse-proxy:
+    container_name: om_reverse-proxy
+    image: caddy:2.6.1-alpine
+    volumes:
+      - ./reverse-proxy/config/Caddyfile:/etc/caddy/Caddyfile
+      - ./reverse-proxy/data:/data
+      - ./file-browser-data:/file-browser-data
+      - reverse-proxy-srv:/srv
+    ports:
+      - 8000:80
+volumes:
+  reverse-proxy-srv:
+  filebeat-data:
