--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,7 +23,9 @@ dependencies = [
     "fastapi-pagination == 0.12.4",
     "marshmallow == 3.19.0",
     "marshmallow-sqlalchemy == 0.29.0",
+    "psutil ==5.9.5",
     "python-dateutil == 2.8.2",
+    "PyYAML == 6.0.1",
     "SQLAlchemy == 2.0.15",
 ]
 dynamic = ["version"]
