Integrate filebeat with the backend + convert logs to inputs

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,7 +10,9 @@ runtime = [
     "SQLAlchemy>=2.0,<2.1",
     "marshmallow-sqlalchemy>=0.29,<0.30",
     "fastapi-pagination>=0.12,<0.13",
-    "python-dateutil>=2.8,<2.9"
+    "python-dateutil>=2.8,<2.9",
+    "PyYAML>=6.0,<6.1",
+    "psutil ==5.9.5",
 ]
 test = [
     "pytest >=7.3,<7.4",
