--- a/dev/frontend-tools/Dockerfile
+++ b/dev/frontend-tools/Dockerfile
@@ -3,4 +3,5 @@ FROM node:20.2.0-slim
 
 WORKDIR /work
 RUN yarn
+ENV VITE_BACKEND_ROOT_API http://localhost:8002/v1
 CMD ["yarn", "dev", "--host", "0.0.0.0"]
