--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - ../backend/tasks.py:/src/tasks.py
       - ../backend/tests:/src/tests
       - reverse-proxy-srv:/reverse-proxy-logs
+      - ./packages.yml:/conf/packages.yml
     environment:
       DATABASE_URL: sqlite+pysqlite://///src/src/offspot_metrics_backend/dev.db
       TEST_DATABASE_URL: sqlite+pysqlite://///src/tests/test.db
