--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -37,6 +37,7 @@ services:
     environment:
       DATABASE_URL: sqlite+pysqlite://///src/src/offspot_metrics_backend/dev.db
       TEST_DATABASE_URL: sqlite+pysqlite://///src/tests/test.db
+      PACKAGE_CONF_FILE: /conf/packages.yml
   frontend-tools:
     build:
       dockerfile: ../dev/frontend-tools/Dockerfile
