Pin Pyright version since we have to do this for all deps + 1.1.318 does not cooperate properly with SQLAlchemy

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,7 +23,7 @@ qa =  [
     "black >=23.3,<23.4",
     "isort >=5.12,<5.13",
     "flake8 >=6.0,<6.1",
-    "pyright >=1.1,<1.2"
+    "pyright == 1.1.317"
 ]
 dev = [
     "pre-commit >=3.3,<3.4",
