Migrate to hatch/hachling + new Python conventions

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,22 @@
-FROM python:3.11-slim
+FROM python:3.11-slim-bookworm
 LABEL org.opencontainers.image.source https://github.com/offspot/metrics
+
+# Install necessary packages
+RUN python -m pip install --no-cache-dir -U \
+      pip \
+      invoke
 
 # to set to your clients' origins
 ENV ALLOWED_ORIGINS http://localhost
 ENV DATABASE_URL sqlite+pysqlite:///local.db
 
-WORKDIR /app
-RUN pip install --no-cache-dir --upgrade pip invoke
-COPY pyproject.toml README.md tasks.py /app/
-RUN invoke install-deps --package runtime
+# Copy code + associated artifacts
+COPY src /src/src
+COPY pyproject.toml *.md /src/
 
-COPY src/ /app/src
+# Install + cleanup
+RUN pip install --no-cache-dir /src \
+ && rm -rf /src
 
+# TODO: fix this
 CMD ["invoke", "serve", "--args", "--host 0.0.0.0 --port 80"]
