--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: ../backend
     container_name: om_backend
     volumes:
-      - ../backend/src:/app/src
+      - ../backend/src:/src/src
     ports:
       - 8000:80
   backend-tools:
@@ -12,9 +12,9 @@ services:
       context: ../backend
     container_name: om_backend-tools
     volumes:
-      - ../backend/src:/app/src
-      - ../backend/tasks.py:/app/tasks.py
-      - ../backend/tests:/app/tests
+      - ../backend/src:/src/src
+      - ../backend/tasks.py:/src/tasks.py
+      - ../backend/tests:/src/tests
     environment:
-      DATABASE_URL: sqlite+pysqlite://///app/src/backend/dev.db
-      TEST_DATABASE_URL: sqlite+pysqlite://///app/tests/test.db
+      DATABASE_URL: sqlite+pysqlite://///sr/src/backend/dev.db
+      TEST_DATABASE_URL: sqlite+pysqlite://///src/tests/test.db
