--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -23,8 +23,9 @@ services:
     container_name: om_backend-tools
     volumes:
       - ../backend/src:/src/src
+      - ../backend/htmlcov:/src/htmlcov
       - ../backend/tasks.py:/src/tasks.py
       - ../backend/tests:/src/tests
     environment:
-      DATABASE_URL: sqlite+pysqlite://///src/src/offspot_metrics_backend//dev.db
+      DATABASE_URL: sqlite+pysqlite://///src/src/offspot_metrics_backend/dev.db
       TEST_DATABASE_URL: sqlite+pysqlite://///src/tests/test.db
