--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -26,5 +26,5 @@ services:
       - ../backend/tasks.py:/src/tasks.py
       - ../backend/tests:/src/tests
     environment:
-      DATABASE_URL: sqlite+pysqlite://///sr/src/backend/dev.db
+      DATABASE_URL: sqlite+pysqlite://///src/src/backend/dev.db
       TEST_DATABASE_URL: sqlite+pysqlite://///src/tests/test.db
