--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -41,7 +41,7 @@ check = [
     "pyright == 1.1.317",
 ]
 test = [
-    "coverage == 7.2.7",   
+    "coverage == 7.2.7",
     "httpx == 0.24.1",
     "pytest == 7.3.1",
     "pytest-asyncio == 0.21.0",
@@ -168,6 +168,8 @@ select = [
 ignore = [
   # Allow non-abstract empty methods in abstract base classes
   "B027",
+  # Allow datetime methods with tz info
+  "DTZ001", "DTZ006",
   # Remove flake8-errmsg since we consider they bloat the code and provide limited value
   "EM",
   # Allow boolean positional values in function calls, like `dict.get(... True)`
@@ -197,6 +199,8 @@ ban-relative-imports = "all"
 [tool.ruff.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
+# Simulator is using pseudo-random generator and magic values on purpose
+"src/simulator.py" = ["S311", "PLR2004"]
 
 [tool.pytest.ini_options]
 minversion = "7.3"
