--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - filebeat-data:/filebeat-data
       - ../backend/filebeat.yml:/usr/share/filebeat/filebeat.yml
       - ./packages.yml:/conf/packages.yml
+      - ../backend/src/offspot_metrics_backend/dev.db:/data/database.db
     command:
       - uvicorn
       - offspot_metrics_backend.entrypoint:app
@@ -36,7 +37,7 @@ services:
       - reverse-proxy-srv:/reverse-proxy-logs
       - ./packages.yml:/conf/packages.yml
     environment:
-      DATABASE_URL: sqlite+pysqlite://///src/src/offspot_metrics_backend/dev.db
+      DATABASE_URL: sqlite+pysqlite:////src/src/offspot_metrics_backend/dev.db
       TEST_DATABASE_URL: sqlite+pysqlite://///src/tests/test.db
       PACKAGE_CONF_FILE: /conf/packages.yml
   frontend-tools:
