Fix nasty stuff following rebase

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,10 +12,11 @@ RUN python -m pip install --no-cache-dir -U \
 # Choose right architecture
 # COPY --from=docker.elastic.co/beats/filebeat-oss:8.8.1-arm64 /usr/share/filebeat /usr/share/filebeat
 COPY --from=docker.elastic.co/beats/filebeat-oss:8.8.1 /usr/share/filebeat /usr/share/filebeat
+COPY filebeat.yml /usr/share/filebeat/filebeat.yml
 
 # to set to your clients' origins
-ENV ALLOWED_ORIGINS http://localhost:8003
-ENV DATABASE_URL sqlite+pysqlite:////app/src/backend/dev.db
+ENV ALLOWED_ORIGINS http://localhost:8003|http://127.0.0.1:8003
+ENV DATABASE_URL sqlite+pysqlite:////data/database.db
 
 # Copy code + associated artifacts
 COPY src /src/src
