--- a/.github/workflows/Tests.yaml
+++ b/.github/workflows/Tests.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run the tests
         working-directory: backend
-        run: inv coverage --no-html --args "-vvv"
+        run: inv coverage --args "-vvv"
 
       - name: Upload coverage report to codecov
         uses: codecov/codecov-action@v3
