--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - ../backend/tests:/src/tests
     environment:
       DATABASE_URL: sqlite+pysqlite:////src/src/offspot_metrics_backend/dev.db
-      TEST_DATABASE_URL: sqlite+pysqlite://///src/tests/test.db
+      TEST_DATABASE_URL: sqlite+pysqlite:////src/tests/test.db
   frontend-tools:
     build:
       dockerfile: ../dev/frontend-tools/Dockerfile
