--- a/dev/frontend-tools/Dockerfile
+++ b/dev/frontend-tools/Dockerfile
@@ -6,4 +6,4 @@ COPY . /work
 RUN yarn
 ENV NODE_ENV=dev
 ENV VITE_BACKEND_ROOT_API http://localhost:8002/v1
-CMD ["yarn", "dev", "--host", "0.0.0.0"]
+CMD ["yarn", "dev", "--host", "0.0.0.0", "--port", "5173"]
