Store logwatcher state in a file and reload on restart + fix failing tests

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,7 @@ RUN python -m pip install --no-cache-dir -U \
 # to set to your clients' origins
 ENV ALLOWED_ORIGINS http://localhost:8003|http://127.0.0.1:8003
 ENV DATABASE_URL sqlite+pysqlite:////data/database.db
+ENV LOGWATCHER_DATA_FOLDER /data/logwatcher
 
 # Copy code + associated artifacts
 COPY src /src/src
@@ -19,7 +20,7 @@ COPY pyproject.toml *.md /src/
 
 # Install project (including dependencies) + install empty DB + cleanup afterwards
 RUN pip install --no-cache-dir /src \
- && mkdir /data \
+ && mkdir -p /data/logwatcher \
  && cd /src/src \
  && alembic upgrade head \
  && rm -rf /src
