--- a/.github/workflows/Tests.yaml
+++ b/.github/workflows/Tests.yaml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Run the tests
         working-directory: backend
+        env:
+          PROCESSING_DISABLED: "True"
         run: inv coverage --args "-vvv"
 
       - name: Upload coverage report to codecov
