Use typed objects as KPI values

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,9 +21,8 @@ dependencies = [
     "alembic == 1.11.3",
     "fastapi[all] == 0.101.1",
     "fastapi-pagination == 0.12.9",
-    "marshmallow == 3.20.1",
-    "marshmallow-sqlalchemy == 0.29.0",
-    "psutil ==5.9.5",
+    "psutil == 5.9.5",
+    "pydantic == 2.3.0", # this is also a sub-dep of fastapi but we rely a lot on it
     "python-dateutil == 2.8.2",
     "PyYAML == 6.0.1",
     "SQLAlchemy == 2.0.20",
