--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -68,6 +68,17 @@ services:
       - reverse-proxy-srv:/srv
     ports:
       - 127.0.0.1:8000:80
+  edupi:
+    container_name: om_edupi
+    image: ghcr.io/offspot/edupi:dev
+    ports:
+      - 127.0.0.1:8004:80
+    volumes:
+      - edupi-data:/data
+    environment:
+      ADMIN_USERNAME: admin
+      ADMIN_PASSWORD: admin
 volumes:
   reverse-proxy-srv:
   logwatcher-data:
+  edupi-data:
