Parse timestamp in logs + making log conversion logic more generic / modular

--- a/backend/tests/unit/conf_files/conf_ok.yaml
+++ b/backend/tests/unit/conf_files/conf_ok.yaml
@@ -63,3 +63,7 @@ packages:
   ident: edupi.offspot.kiwix.org
   title: Shared files 2
   url: //edupi2.renaud.test/
+- kind: app
+  ident: wikifundi-en.offspot.kiwix.org
+  title: Wikifundi
+  url: //wikifundi.renaud.test/
