Optimize Docker image build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,11 +14,17 @@ ENV ALLOWED_ORIGINS http://localhost:8003|http://127.0.0.1:8003
 ENV DATABASE_URL sqlite+pysqlite:////data/database.db
 ENV LOGWATCHER_DATA_FOLDER /data/logwatcher
 
+COPY pyproject.toml README.md /src/
+COPY src/offspot_metrics_backend/__about__.py /src/src/offspot_metrics_backend/__about__.py
+
+# Install project dependencies
+RUN pip install --no-cache-dir /src
+
 # Copy code + associated artifacts
 COPY src /src/src
-COPY pyproject.toml *.md /src/
+COPY *.md /src/
 
-# Install project (including dependencies) + install empty DB + cleanup afterwards
+# Install project + cleanup afterwards
 RUN pip install --no-cache-dir /src \
  && mkdir -p /data/logwatcher \
  && cd /src/src \
