--- a/dev/backend-tools/Dockerfile
+++ b/dev/backend-tools/Dockerfile
@@ -5,13 +5,20 @@ WORKDIR /src
 # uprade pip
 RUN python -m pip install --no-cache-dir -U pip
 
+# copy minimal project items to install dependencies
+COPY pyproject.toml README.md /src/
+COPY src/offspot_metrics_backend/__about__.py /src/src/offspot_metrics_backend/__about__.py
+
+# Install project dependencies
+RUN cd /src \
+ && python -m pip install --no-cache-dir ".[dev]"
+
 # copy project files
-COPY pyproject.toml *.md tasks.py /src/
+COPY *.md tasks.py /src/
 COPY src /src/src
 COPY tests /src/tests
 
-# upgrade pip + install project dependencies
-RUN cd /src \
- && python -m pip install --no-cache-dir ".[dev]"
+# install project
+RUN pip install --no-cache-dir /src
 
 CMD ["sleep", "Infinity"]
